
v1.9.0(10.5.2018)[An21,Ap16] - [6ed3e48]
- Nova memòria obligatòria: 'Benaurada Verge Maria, Mare de l’Església'
- Memòries lliures sempre visibles. Es decideix si es resen amb un Switch a la pantalla principal
- Solucionats alguns errors:
  - Faltaven alguns himnes en llatí
  - L'invitatori del Diumenge de Pasqua causava errors
  - No sortien alguns 'Glòria'

v1.9.1(11.6.2018)[An22,Ap17]
- Visibles altre cop les memòries lliures de Santa Maria en dissabte

v1.10.1(29.7.2018)[An24,Ap19] - [958e546]
- (!) Noves opcions dins de configuració:
  - Opció de fer donatius
  - Opció de posar-te en contacte
- (!) Ara pots compartir el text de les oracions
- Arreglats alguns dies litúrgics
- Fons blanc dins de les oracions
- Millora estètica de la configuració

v1.11(26.11.2018)[An25,Ap20]
  - Afegida la litúrgia del 2019

v2.0.0 BETA (10.4.2019)[An26,-]
  - Nou apartat per resar amb les lectures de la missa
  - Canviada la imatge de fons
  - Redistribució dels botons Missatge i Donatiu

v2.0.1 (11.4.2019)[An27,Ap21]
  - Errors detectats

v2.1.0 (17.6.2019)[An28,Ap22]
  - Errors corregits
  - Aclariment del donatiu "lliure"

v2.1.1 (21.6.2019)[-,Ap23]
  - [iOs] Obre l'enllaç de donatius amb el navegador i no des de l'interior de l'aplicació

v2.1.2 (18.7.2019)[An29,Ap24]
  - Errors corregits

v2.2.1 (4.10.2019)[An31,Ap26]
  - Any 2020 litúrgic disponible (no visible)
  - Incorporació de la diòcesi de Mallorca
  - Alguns errors corregits
  - Compatibilitat amb últims smartphones

v2.2.2 (26.10.2019)[An32,Ap27]
- Any 2020 litúrgic disponible
- Alguns errors corregits

v2.2.3 (08.11.2019)[An33,Ap29]
- Correcció de la pantalla en blanc en l'apartat de la missa
- Correcció dels textos tallats a la part dreta de la pantalla
- Rúbrica "S'omet el Glòria" en vermell
-----
- Comento tot allò relacionat amb el share text. No ho tornaré a fer

v2.2.4 ()[An34,Ap30]
- 
-----
- Afegeixo la part de la missa a l'StateTest